# Blindference-node

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt  updates.md
.github/workflows/: publish.yml
blindference_node/: __init__.py  backend_loader.py  cli.py  cloud_inference.py  commitment.py  config.py  crypto.py  execution.py  icl_client.py  ipfs_client.py  job_handler.py  node_loop.py  registry.py  utils.py  wallet.py
blindference_node/attestation/: __init__.py  mock.py
blindference_node/contracts/abis/: BLIND.json  BlindferenceStaking.json  (+5 more)
blindference_node/models/: __init__.py  base.py  gemini_backend.py  groq_backend.py  mock_backend.py  registry.py  vllm_backend.py
blindference_node/scripts/: __init__.py  cofhe_bridge.mjs
contracts/: addresses.json
contracts/abis/: .gitkeep  ExecutionCommitmentRegistry.json  NodeAttestationRegistry.json  NodeOperatorRegistry.json  NodeRegistry.json  PromptKeyStore.json  ResultRegistry.json
docs/: .gitkeep  attestation.md  hardware.md  quickstart.md  settlement.md  slashing.md
docs/assets/: architecture-ascii.md  architecture.excalidraw  architecture.mermaid.md  generate_diagram.py
scripts/: cofhe_decrypt.ts  cofhe_encrypt.ts  polyfill.ts
tests/: __init__.py  test_attestation.py  test_cofhe_real.py  test_commitment.py  test_config.py  test_crypto.py  test_e2e.py  test_execution.py  test_execution_real.py  test_icl_client.py  test_ipfs_client.py  test_job_handler.py  test_node_loop.py  test_registry.py  test_wallet.py
